@startuml
hide circle
skinparam classAttributeIconSize 0
class FriendRequestController {
    - _signalRService: SignalRService
    - _publishEndpoint: IPublishEndpoint
    + AcceptFriendRequest(AcceptFriendRequestDTO accecptFriendRequestDTO): Task<IActionResult>
}

class ApplicationDbContext {
    + FriendRequests: DbSet<FriendRequest>
    + Friends: DbSet<Friend>
    # OnConfiguring(DbContextOptionsBuilder optionsBuilder): void
}


class AcceptFriendRequestDTO {
    + FriendRequestId: string
}

class Friend{
    + UserId: string
    + FriendId: string
    + User: ApplicationUser
}

class FriendRequest {
    + Id: Guid
    + SenderId: string
    + ReceiverId: string
    + Content: string
    + Status: string
    + CreatedAt: DateTime
    + Sender: ApplicationUser
    + Receiver: ApplicationUser
}

class FriendCreatedEvent{
    + UserId: Guid
    + OtherUserId: Guid
}

class SignalRService {
    + HubConnection: HubConnection
    + InvokeAction<T>(string action, T obj): Task
}

FriendRequestController "1" o--"1" ApplicationDbContext
FriendRequestController "1" --"1" AcceptFriendRequestDTO
FriendRequestController "1" --"1" SignalRService
FriendRequestController "1" --"1" FriendCreatedEvent
ApplicationDbContext "1" o--"1..*" FriendRequest
ApplicationDbContext "1" o--"1..*" Friend
@enduml